# LvlupGPT

./: .gitattributes  .gitmodules  cli.py  setup.sh
autogpts/autogpt/: .flake8  .gitattributes  .gitignore  .sourcery.yaml  Dockerfile  autogpt.sh  codecov.yml  prompt_settings.yaml  pyproject.toml  run  setup
autogpts/autogpt/.devcontainer/: Dockerfile  docker-compose.yml
autogpts/autogpt/agbenchmark_config/: .gitignore  benchmarks.py
autogpts/autogpt/autogpt/: __init__.py  __main__.py  singleton.py
autogpts/autogpt/autogpt/agent_manager/: __init__.py  agent_manager.py
autogpts/autogpt/autogpt/agents/: __init__.py
autogpts/autogpt/autogpt/app/: agent_protocol_server.py  cli.py  configurator.py  main.py  setup.py  spinner.py
autogpts/autogpt/autogpt/commands/: decorators.py  execute_code.py  git_operations.py  times.py  user_interaction.py  web_selenium.py
autogpts/autogpt/autogpt/config/: __init__.py  ai_directives.py  config.py
autogpts/autogpt/autogpt/core/: pyproject.toml
autogpts/autogpt/autogpt/file_workspace/: __init__.py  base.py  gcs.py  local.py
autogpts/autogpt/autogpt/json_utils/: utilities.py
autogpts/autogpt/autogpt/logs/: filters.py  formatters.py
autogpts/autogpt/autogpt/models/: context_item.py
autogpts/autogpt/autogpt/plugins/: __init__.py
autogpts/autogpt/autogpt/processing/: text.py
autogpts/autogpt/autogpt/prompts/: prompt.py
autogpts/autogpt/autogpt/speech/: base.py  (+4 more)
autogpts/autogpt/hooks/: post-checkout  post-rewrite
autogpts/autogpt/scripts/: check_requirements.py
autogpts/autogpt/tests/: conftest.py  utils.py
(+313 files in other folders)
