# This is the pyproject.toml file for the agpt package. It contains metadata, dependencies, and configuration settings for the project.

# The [tool.poetry] section includes basic metadata for the package, such as its name, version, authors, and description.

# The [tool.poetry.scripts] section defines console scripts that can be executed using the command line.

# The [tool.poetry.dependencies] section lists the dependencies required for the package to run.

# The [tool.poetry.extras] section defines optional dependencies that can be installed using the `--with` flag with Poetry.

# The [build-system] section specifies the build requirements and backend for the package.

# The [tool.black] section includes configuration options for the Black code formatter.
